# docs/openapi-admin.json
@@ -492,6 +492,18 @@
       "Error": {
         "additionalProperties": false,
         "properties": {
+          "error": {
+            "$ref": "#/components/schemas/ErrorDetail"
+          }
+        },
+        "required": [
+          "error"
+        ],
+        "type": "object"
+      },
+      "ErrorDetail": {
+        "additionalProperties": false,
+        "properties": {
           "code": {
             "type": "string"
           },
@@ -990,6 +1002,16 @@
             },
             "description": "Success."
           },
+          "400": {
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/Error"
+                }
+              }
+            },
+            "description": "The body is not valid JSON."
+          },
           "401": {
             "content": {
               "application/json": {
@@ -1132,6 +1154,16 @@
               }
             },
             "description": "Success."
+          },
+          "400": {
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/Error"
+                }
+              }
+            },
+            "description": "The body is not valid JSON."
           },
           "401": {
             "content": {
@@ -1311,6 +1343,16 @@
             },
             "description": "Success."
           },
+          "400": {
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/Error"
+                }
+              }
+            },
+            "description": "The body is not valid JSON."
+          },
           "401": {
             "content": {
               "application/json": {
@@ -1448,6 +1490,16 @@
             },
             "description": "Success."
           },
+          "400": {
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/Error"
+                }
+              }
+            },
+            "description": "The body is not valid JSON."
+          },
           "401": {
             "content": {
               "application/json": {
@@ -1584,6 +1636,16 @@
               }
             },
             "description": "Success."
+          },
+          "400": {
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/Error"
+                }
+              }
+            },
+            "description": "The body is not valid JSON."
           },
           "401": {
             "content": {
@@ -1727,6 +1789,16 @@
               }
             },
             "description": "Success."
+          },
+          "400": {
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/Error"
+                }
+              }
+            },
+            "description": "The body is not valid JSON."
           },
           "401": {
             "content": {
@@ -1894,6 +1966,16 @@
             },
             "description": "Success."
           },
+          "400": {
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/Error"
+                }
+              }
+            },
+            "description": "The body is not valid JSON."
+          },
           "401": {
             "content": {
               "application/json": {
@@ -2034,6 +2116,16 @@
               }
             },
             "description": "Success."
+          },
+          "400": {
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/Error"
+                }
+              }
+            },
+            "description": "The body is not valid JSON."
           },
           "401": {
             "content": {
@@ -2366,6 +2458,16 @@
               }
             },
             "description": "Success."
+          },
+          "400": {
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/Error"
+                }
+              }
+            },
+            "description": "The body is not valid JSON."
           },
           "401": {
             "content": {
